Adding Create Person

--- a/android/OpenRegistration/app/src/main/res/layout/activity_user_information.xml
+++ b/android/OpenRegistration/app/src/main/res/layout/activity_user_information.xml
@@ -32,11 +32,23 @@
             android:orientation="vertical"
             android:measureWithLargestChild="false">
 
-            <TextView
-                android:id="@+id/organization_name"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/org_name"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/organization_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
