--- a/android/OpenRegistration/app/src/main/res/layout/activity_search_organization.xml
+++ b/android/OpenRegistration/app/src/main/res/layout/activity_search_organization.xml
@@ -26,11 +26,22 @@
             android:layout_marginBottom="8dp" />
 
         <TextView
+            android:id="@+id/search_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:text="Searching..." />
     </LinearLayout>
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:isIndicator="true"
+        android:numStars="5"
+        android:stepSize="0.01"
+        android:rating="0.01"
+        style="@style/status_indicator"
+        android:id="@+id/ratingBar" />
 
     <ScrollView
         android:id="@+id/search_form"
