--- a/android/OpenRegistration/app/src/main/res/values/strings_activity_user_information.xml
+++ b/android/OpenRegistration/app/src/main/res/values/strings_activity_user_information.xml
@@ -18,4 +18,8 @@
     <string-array name="languages">
         <item>English</item>
     </string-array>
+
+    <string-array name="twodigitlanguage">
+        <item>en</item>
+    </string-array>
 </resources>
