Adding Create PasswordAccount raises Error 400:add.user.cleartrust.error:Could not add person to cleartrust.
Need to work on further screens.

--- a/android/OpenRegistration/app/src/main/res/values/string_activity_password_account.xml
+++ b/android/OpenRegistration/app/src/main/res/values/string_activity_password_account.xml
@@ -4,4 +4,6 @@
     <string name="reenter_password">*Re-enter Password</string>
     <string name="password">*Password</string>
     <string name="user_id_note_label">Note:</string>
+    <string name="error_user_id_length">UserId length must be between 4 and 20 characters</string>
+    <string name="error_password_mismatch">Password dos not match</string>
 </resources>
