--- a/android/OpenRegistration/app/src/main/res/layout/activity_security_question.xml
+++ b/android/OpenRegistration/app/src/main/res/layout/activity_security_question.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.covisint.papi.sample.android.openregistration.TimezoneLanguageInputActivity">
+    tools:context="com.covisint.papi.sample.android.openregistration.SecurityQuestionActivity">
 
-    <!-- Person Submission progress -->
+    <!-- Security Question Submission progress -->
     <LinearLayout
-        android:id="@+id/person_submission_progress"
+        android:id="@+id/security_que_submission_progress"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -22,7 +22,7 @@
             android:layout_marginBottom="8dp" />
 
         <TextView
-            android:id="@+id/submit_person_status"
+            android:id="@+id/submit_sec_que_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -40,13 +40,13 @@
         android:id="@+id/ratingBar" />
 
     <ScrollView
-        android:id="@+id/tz_lang_submission_form"
+        android:id="@+id/security_question_submission_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
 
         <LinearLayout
-            android:id="@+id/name_search_form"
+            android:id="@+id/security_question_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -57,7 +57,6 @@
                 android:id="@+id/message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 android:layout_gravity="center"
                 android:textColor="@android:color/holo_red_dark" />
 
@@ -70,10 +69,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/time_zone" />
+                    android:text="@string/question_1" />
 
                 <Spinner
-                    android:id="@+id/time_zone"
+                    android:id="@+id/question_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -87,13 +86,49 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/language_preference" />
+                    android:text="@string/answer_1" />
+
+                <EditText
+                    android:id="@+id/answer_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_2" />
 
                 <Spinner
-                    android:id="@+id/lang_prefs"
+                    android:id="@+id/question_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:entries="@array/languages"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/answer_2" />
+
+                <EditText
+                    android:id="@+id/answer_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"/>
             </LinearLayout>
 
             <Button
@@ -108,6 +143,3 @@
     </ScrollView>
 
 </LinearLayout>
-
-
-
