--- a/android/OpenRegistration/app/src/main/res/layout/activity_security_question.xml
+++ b/android/OpenRegistration/app/src/main/res/layout/activity_security_question.xml
@@ -63,8 +63,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:gravity="fill"
+                android:padding="10dip"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -80,8 +81,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:gravity="fill"
+                android:padding="10dip"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -93,13 +95,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/note"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/note_text"/>
+                    </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:gravity="fill"
+                android:padding="10dip"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -111,13 +128,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:entries="@array/languages"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/note"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/note_text" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:gravity="fill"
+                android:padding="10dip"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -132,7 +167,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/tz_lang_submission_button"
+                android:id="@+id/sec_ques_answer_submission_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
